--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -11,8 +11,11 @@
   "author": "James",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.19.5",
     "next": "^9.5.5",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
